<resources>
    <string name="app_name">LiteBle</string>
    <string name="action_settings">设置</string>

    <string name="service_uuid" formatted="false">UUID: 0x%s  \nfull:  %s</string>
    <string name="image_next">arrow</string>
    <string name="text_type">类型：</string>
    <string name="text_read_data">读数据</string>
    <string name="text_write_data">写数据</string>
    <string name="text_start_listener_data">开始监听</string>
    <string name="text_scan_device">搜索设备</string>

    <!--<string name="exchange_txt_hint">-->
    <!--<Data>-->
    <!--<font color="#ff0000">-->
    <!--<b>%1$s</b>-->
    <!--</font>-->
    <!--:-->
    <!--<font color="#00ff00">-->
    <!--<b>%2$s</b>-->
    <!--</font>-->
    <!--</Data></string>-->
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="action_about">关于</string>
    <string name="app_version">APP版本：V%s</string>
    <string name="sdk_version">SDK版本：V%s</string>
    <string name="save_setting">保存</string>
    <string name="brand">品牌：%s</string>
    <string name="model">型号：%s</string>
    <string name="system_version">系统版本：%s</string>
</resources>
