<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.eson.liteble.activity.MainActivity">

    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_scan"
        android:orderInCategory="100"
        android:title="@string/menu_scan"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>
