<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="Characteristic UUID:"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/uuid_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:textSize="@dimen/text_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/text_type"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/properties_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/readBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:background="@color/colorPrimary"
            android:padding="6dp"
            android:text="@string/text_read_data"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/writeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:background="@color/colorPrimary"
            android:padding="6dp"
            android:text="@string/text_write_data"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/notifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:background="@color/colorPrimary"
            android:padding="6dp"
            android:text="@string/text_start_listener_data"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/descriptorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="Descriptor:" />

        <ListView
            android:id="@+id/desc_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="Data:" />

        <ListView
            android:id="@+id/data_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

    </LinearLayout>
</LinearLayout>